<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_nodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/undraw_empty_street_sfxm"
            app:layout_constraintBottom_toTopOf="@+id/tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.6" />

        <TextView
            android:id="@+id/tv"
            style="@style/muliBoldNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oops"
            android:textColor="@color/md_white_1000"
            app:layout_constraintBottom_toTopOf="@+id/tv_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/there_is_no_one_of_your_favourite_here"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>