<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.fizhu.bikeappconcept.viewmodels.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/muliBoldLarge"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_account"
            app:title="@string/account"
            app:titleTextAppearance="@style/muliBoldLarge" />

        <ImageView
            android:id="@+id/iv_profile"
            profileImage="@{viewModel.userData.photo}"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/margin"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_cam"
            style="@style/clickableBackgroudBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:src="@drawable/ic_cam"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintEnd_toEndOf="@+id/iv_profile" />

        <TextView
            android:id="@+id/tv_fullname"
            style="@style/muliBoldLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{viewModel.userData.name}"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toTopOf="@+id/iv_profile" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{'@' + viewModel.userData.username}"
            app:layout_constraintStart_toStartOf="@+id/tv_fullname"
            app:layout_constraintTop_toBottomOf="@+id/tv_fullname" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="30 Favourite"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintStart_toStartOf="@+id/tv_fullname"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_title_about"
            style="@style/muliBoldSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_extra"
            android:text="@string/about"
            android:textColor="@color/md_white_1000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/lorem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_about" />

        <TextView
            android:id="@+id/tv_lastest"
            style="@style/muliBoldSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_extra"
            android:text="@string/lastest"
            android:textColor="@color/md_white_1000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_about" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>